--- a/public/test.html
+++ b/public/test.html
@@ -15,12 +15,12 @@
 
     <div>
         <h2>Image of the Day</h2>
-        <img src="tree.jpeg" alt="MOTD Image">
+        <img src="" alt="MOTD Image">
     </div>
 
     <div>
         <h2>Stay Connected</h2>
         <p>Join our community and stay updated with the latest news.</p>
-        <img src="neon.jpg" alt="Community Logo">
+        <img src="" alt="Community Logo">
     </div>
 </div>
